@@ -31,4 +31,7 @@ and:
  
 Once the launching is successful, check the application by opening from a browser:
 
-        http://localhost:7080/vaadin
+            http://localhost:7080/vaadin
+        
+>Note. Under Eclipse, jetty:run needs here some space. Add to the launch configuration something like:  
+>>>JRE > VM arguments: `-XX:MaxPermSize=256m -Xms1024m -Xmx1024m -Xss2m`
